--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="News Portal"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="stylesheet" href="../src/components/app/App.css">
-    <title>React App</title>
+    <title>News Portal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
